fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -118,8 +118,8 @@ body {
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  height: 50%;
-  overflow-y: auto;
+  height: 300px;
+  overflow-y: scroll;
   padding: 10px;
   margin-bottom: 10px;
 }
